# radix

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: front-panel-rework-plan.md  ui-redesign-plan.md
packaging/: calcutron.spec  entry.py  radix.desktop  radix.spec
src/calcutron/: __init__.py  __main__.py  session.py
src/calcutron/engine/: evaluator.py  formatter.py  fpga.py  functions.py  help.py  lexer.py  nodes.py  parser.py  render.py  values.py  viz.py
src/calcutron/history/: __init__.py  store.py
src/calcutron/ui_qt/: __init__.py  app.py  bit_panel.py  completer.py  highlight.py  history_model.py  main_window.py  settings.py  theme.py  viz_panel.py
src/radix/: __init__.py  __main__.py  session.py
src/radix/engine/: CLAUDE.md  __init__.py  csr.py  errors.py  evaluator.py  formatter.py  fpga.py  functions.py  help.py  layouts.py  lexer.py  nodes.py  parser.py  render.py  values.py
src/radix/history/: store.py
src/radix/ui_qt/: CLAUDE.md  __init__.py  app.py  bit_panel.py  channels.py  completer.py  highlight.py  history_model.py  input_edit.py  inspector.py  main_window.py  settings.py  theme.py  viz_panel.py  zones.py
tests/: test_cli.py  test_completer.py  test_csr.py  test_engine_golden.py  test_formatter.py  test_fpga.py  test_help.py  test_history_store.py  test_layouts.py  test_persist.py  test_properties.py  test_ui_smoke.py
