[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calcutron"
version = "0.1.0"
description = "Calcutron-9000: keyboard-first scientific + programmer calculator for engineers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PySide6-Essentials>=6.8",
    "mpmath>=1.3",
    "platformdirs>=4",
]

[project.scripts]
calcutron = "calcutron.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "pytest-qt>=4.4",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyinstaller>=6.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/calcutron"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["calcutron"]

[[tool.mypy.overrides]]
module = "calcutron.engine.*"
strict = true

[[tool.mypy.overrides]]
module = "mpmath.*"
ignore_missing_imports = true
